# SSAD1

./: CMakeLists.txt  README.md  SSAD1.sln
SSAD1/: CMakeLists.txt  Playable.cpp  Playable.h  Player.cpp  Player.h  PlayerCLI.cpp  PlayerCLI.h  Playlist.cpp  Playlist.h  PlaylistIterator.cpp  PlaylistIterator.h  PlaylistIteratorImpl.cpp  PlaylistIteratorImpl.h  PlaylistIteratorPlainImpl.cpp  PlaylistIteratorPlainImpl.h  PlaylistIteratorPlainlmpl.cpp  PlaylistIteratorPlainlmpl.h  PlaylistIteratorShuffleImpl.cpp  PlaylistIteratorShuffleImpl.h  PlaylistIteratorShufflelmpl.cpp  PlaylistIteratorShufflelmpl.h  PlaylistIteratorlmpl.cpp  PlaylistIteratorlmpl.h  SSAD1.vcxproj  SSAD1.vcxproj.filters  StackTrackListPosition.cpp  StackTrackListPosition.h  Track.cpp  Track.h  TrackList.cpp  TrackList.h  TrackListPosition.cpp  TrackListPosition.h  main.cpp  resource.h
